feat: сверстать footer и header, подключить логику работы меню

--- a/src/blocks/footer/footer.sass
+++ b/src/blocks/footer/footer.sass
@@ -1,4 +1,6 @@
-.header
+.footer
+  flex-shrink: 0
+  color: $color-white
   background-color: $color-red
   display: flex
   justify-content: center
