--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -1,3 +1,34 @@
-@import url('../vendor/normalize.css')
-@import url('../vendor/fonts/fonts.css')
-@import url('../blocks/header/header.sass')
+// vendor
+@import '../vendor/normalize.css'
+@import '../vendor/fonts/fonts.css'
+
+// variables
+@import '../sass/variables/variables'
+
+// page
+@import '../blocks/page/page'
+
+// header
+@import '../blocks/header/header'
+@import '../blocks/header/__container/header__container'
+@import '../blocks/header/__logo-link/header__logo-link'
+@import '../blocks/header/__logo-link/_visibility/header__logo-link_visibility_show'
+@import '../blocks/header/__logo-link/_visibility/header__logo-link_visibility_hidden'
+@import '../blocks/header/__logo/header__logo'
+@import '../blocks/header/__nav/header__nav'
+@import '../blocks/header/__nav/_visibility/header__nav_visibility_hidden'
+@import '../blocks/header/__nav/_visibility/header__nav_visibility_show'
+@import '../blocks/header/__nav-button/header__nav-button'
+@import '../blocks/header/__nav-button/_type/header__nav-button_type_open'
+@import '../blocks/header/__nav-button/_type/header__nav-button_type_close'
+@import '../blocks/header/__nav-links/header__nav-links'
+@import '../blocks/header/__nav-link-container/header__nav-link-container'
+@import '../blocks/header/__nav-link/header__nav-link'
+
+// content
+@import '../blocks/content/content'
+
+// footer
+@import '../blocks/footer/footer'
+@import '../blocks/footer/__container/footer__container'
+@import '../blocks/footer/__copyright/footer__copyright'
