--- a/src/blocks/header/__container/header__container.sass
+++ b/src/blocks/header/__container/header__container.sass
@@ -16,13 +16,17 @@
     justify-content: space-between
     min-height: 84px
 
-.header__container .header__nav-button
-  justify-self: end
+  & .header__nav-button
+    justify-self: end
 
-.header__container .header__nav
-  grid-column: 1/3
-  grid-row: 2/3
+  & .header__nav
+    grid-column: 1/3
+    grid-row: 2/3
 
-  @media screen and (min-width: $tablet-width)
-    grid-column: 1/2
-    grid-row: 1/2
+    @media screen and (min-width: $tablet-width)
+      grid-column: 1/2
+      grid-row: 1/2
+
+  & div
+    justify-self: end
+    align-self: center
