feat: добавить блоки intro и composition

--- a/src/blocks/header/__nav-link/header__nav-link.sass
+++ b/src/blocks/header/__nav-link/header__nav-link.sass
@@ -4,7 +4,7 @@
   line-height: 24px
   text-decoration: none
   color: $color-white
-  transition: font-weight .2s linear
+  transition: all .2s linear
 
   &:hover
     
