--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -8,6 +8,9 @@
 // page
 @import '../blocks/page/page'
 
+// span-accent
+@import '../blocks/span-accent/span-accent'
+
 // header
 @import '../blocks/header/header'
 @import '../blocks/header/__container/header__container'
@@ -26,6 +29,33 @@
 
 // content
 @import '../blocks/content/content'
+
+// section
+@import '../blocks/section/section'
+@import '../blocks/section/__nav-item/section__nav-item'
+
+// main-title
+@import '../blocks/main-title/main-title'
+
+// link-button
+@import '../blocks/link-button/link-button'
+
+// two-columns
+@import '../blocks/two-columns/two-columns'
+@import '../blocks/two-columns/__img/two-columns__img'
+@import '../blocks/two-columns/__text/two-columns__text'
+
+// intro
+@import '../blocks/intro/intro'
+@import '../blocks/intro/__paragraph/intro__paragraph'
+@import '../blocks/intro/__link-button/intro__link-button'
+
+// composition
+@import '../blocks/composition/composition'
+@import '../blocks/composition/__title/composition__title'
+@import '../blocks/composition/__paragraph/composition__paragraph'
+@import '../blocks/composition/__list/composition__list'
+@import '../blocks/composition/__list-item/composition__list-item'
 
 // footer
 @import '../blocks/footer/footer'
