--- a/src/sass/variables/variables.sass
+++ b/src/sass/variables/variables.sass
@@ -1,6 +1,8 @@
 // color
 $color-red: #DF2626
-$color-white: #ffffff
+$color-white: #FFFFFF
+$color-black: #000000
+$color-yellow: #FFCE00
 
 // width
 $mobile-width: 320px
