feat: добавить блок camera, поправить размеры изображений в блоках

--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -33,6 +33,7 @@
 // section
 @import '../blocks/section/section'
 @import '../blocks/section/__nav-item/section__nav-item'
+@import '../blocks/section/__nav-item/_theme/section__nav-item_theme_dark'
 
 // main-title
 @import '../blocks/main-title/main-title'
@@ -48,14 +49,29 @@
 // intro
 @import '../blocks/intro/intro'
 @import '../blocks/intro/__paragraph/intro__paragraph'
+@import '../blocks/intro/__img/intro__img'
 @import '../blocks/intro/__link-button/intro__link-button'
 
 // composition
 @import '../blocks/composition/composition'
 @import '../blocks/composition/__title/composition__title'
 @import '../blocks/composition/__paragraph/composition__paragraph'
+@import '../blocks/composition/__img/composition__img'
 @import '../blocks/composition/__list/composition__list'
 @import '../blocks/composition/__list-item/composition__list-item'
+
+// camera
+@import '../blocks/camera/camera'
+@import '../blocks/camera/__title/camera__title'
+@import '../blocks/camera/__title-item/camera__title-item'
+@import '../blocks/camera/__img/camera__img'
+@import '../blocks/camera/__list-title/camera__list-title'
+@import '../blocks/camera/__list/camera__list'
+@import '../blocks/camera/__list-item/camera__list-item'
+@import '../blocks/camera/__quote/camera__quote'
+@import '../blocks/camera/__quote-author-container/camera__quote-author-container'
+@import '../blocks/camera/__quote-author/camera__quote-author'
+@import '../blocks/camera/__quote-author-subline/camera__quote-author-subline'
 
 // footer
 @import '../blocks/footer/footer'
