--- a/src/blocks/camera/__list-item/camera__list-item.sass
+++ b/src/blocks/camera/__list-item/camera__list-item.sass
@@ -1,27 +1,25 @@
-.composition__list-item
+.camera__list-item
   position: relative
-  font-weight: 400
-  font-size: 14px
-  line-height: 18px
+  display: grid
+  row-gap: 30px
 
   &::after
     content: ''
     position: absolute
-    top: calc(100% + 14px)
+    top: calc(100% + 30px)
     left: 0
     width: 100%
     height: 1px
-    background-color: $color-black
+    background-color: $color-white
 
   &:last-of-type::after
-    display: none    
+    display: none
 
   @media screen and (min-width: $tablet-width)
-    font-size: 18px
-    line-height: 28px
+    row-gap: 60px
 
     &::after
-      top: calc(100% + 30px)
+      top: calc(100% + 60px)
 
   @media screen and (min-width: $desktop-width)
 
