--- a/src/blocks/two-columns/two-columns.sass
+++ b/src/blocks/two-columns/two-columns.sass
@@ -5,7 +5,7 @@
 
   @media screen and (min-width: $desktop-width)
     grid-template-columns: 648px 1fr
-    grid-auto-rows: min-content 1fr min-content
+    grid-template-rows: min-content 1fr min-content
     column-gap: 52px
     padding-top: 50px
 
