feat: добавить блок orders

--- a/src/blocks/section/__nav-item/section__nav-item.sass
+++ b/src/blocks/section/__nav-item/section__nav-item.sass
@@ -6,7 +6,7 @@
   font-size: 14px
   line-height: 20px
   text-transform: uppercase
-  width: calc(100% - 40px)
+  max-width: 600px
 
   &::before
     content: ''
@@ -27,4 +27,4 @@
 
   @media screen and (min-width: $desktop-width)
     top: 50px
-    left: 50px
+    left: calc(50% - 670px)
