--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -45,12 +45,12 @@
 @import '../blocks/two-columns/two-columns'
 @import '../blocks/two-columns/__img/two-columns__img'
 @import '../blocks/two-columns/__text/two-columns__text'
+@import '../blocks/two-columns/__link-button/two-columns__link-button'
 
 // intro
 @import '../blocks/intro/intro'
 @import '../blocks/intro/__paragraph/intro__paragraph'
 @import '../blocks/intro/__img/intro__img'
-@import '../blocks/intro/__link-button/intro__link-button'
 
 // composition
 @import '../blocks/composition/composition'
@@ -72,6 +72,12 @@
 @import '../blocks/camera/__quote-author-container/camera__quote-author-container'
 @import '../blocks/camera/__quote-author/camera__quote-author'
 @import '../blocks/camera/__quote-author-subline/camera__quote-author-subline'
+
+// orders
+@import '../blocks/orders/orders'
+@import '../blocks/orders/__title/orders__title'
+@import '../blocks/orders/__img/orders__img'
+@import '../blocks/orders/__paragraph/orders__paragraph'
 
 // footer
 @import '../blocks/footer/footer'
