--- a/src/blocks/section/section.sass
+++ b/src/blocks/section/section.sass
@@ -9,5 +9,8 @@
     padding: 0 40px 40px
 
   @media screen and (min-width: $desktop-width)
-    padding: 0 50px 50px
-    width: $desktop-width
+    padding: 0 0 50px
+    display: flex
+    flex-direction: column
+    align-items: center
+    
