--- a/src/blocks/two-columns/two-columns.sass
+++ b/src/blocks/two-columns/two-columns.sass
@@ -4,9 +4,9 @@
   padding-top: 110px
 
   @media screen and (min-width: $desktop-width)
-    grid-template-columns: 648px 1fr
+    grid-template-columns: 648px 642px
     grid-template-rows: min-content 1fr min-content
-    column-gap: 52px
+    column-gap: 50px
     padding-top: 50px
 
     & &__title
