feat: добавить блок subscribe

--- a/src/blocks/camera/__list-item/camera__list-item.sass
+++ b/src/blocks/camera/__list-item/camera__list-item.sass
@@ -22,6 +22,7 @@
       top: calc(100% + 60px)
 
   @media screen and (min-width: $desktop-width)
+    max-width: 526px
 
     &::after
       display: none
