--- a/src/blocks/camera/__list/camera__list.sass
+++ b/src/blocks/camera/__list/camera__list.sass
@@ -10,5 +10,5 @@
     row-gap: 120px
 
   @media screen and (min-width: $desktop-width)
-    grid-template-columns: repeat(2, 526px)
-    column-gap: 172px
+    grid-template-columns: 648px 642px
+    column-gap: 50px
