--- a/src/blocks/intro/intro.sass
+++ b/src/blocks/intro/intro.sass
@@ -1,6 +1,8 @@
 .intro
   background-color: $color-white
-  padding-top: 14px
+
+  & .two-columns
+    padding-top: 14px
 
   @media screen and (min-width: $tablet-width)
     padding-top: 40px
