--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -41,6 +41,15 @@
 // link-button
 @import '../blocks/link-button/link-button'
 
+// form
+@import '../blocks/form/form'
+@import '../blocks/form/__set/form__set'
+@import '../blocks/form/__field/form__field'
+@import '../blocks/form/__input/form__input'
+@import '../blocks/form/__submit/form__submit'
+@import '../blocks/form/__placeholder/form__placeholder'
+@import '../blocks/form/__placeholder/_hidden/form__placeholder_hidden'
+
 // two-columns
 @import '../blocks/two-columns/two-columns'
 @import '../blocks/two-columns/__img/two-columns__img'
@@ -78,6 +87,11 @@
 @import '../blocks/orders/__title/orders__title'
 @import '../blocks/orders/__img/orders__img'
 @import '../blocks/orders/__paragraph/orders__paragraph'
+
+// subscribe
+@import '../blocks/subscribe/subscribe'
+@import '../blocks/subscribe/__container/subscribe__container'
+@import '../blocks/subscribe/__title/subscribe__title'
 
 // footer
 @import '../blocks/footer/footer'
