--- a/src/blocks/link-button/link-button.sass
+++ b/src/blocks/link-button/link-button.sass
@@ -1,6 +1,7 @@
 .link-button
   font-size: 14px
   line-height: 28px
+  text-decoration: none
   color: $color-black
   background-color: $color-white
   box-sizing: border-box
