--- a/src/blocks/section/__nav-item/section__nav-item.sass
+++ b/src/blocks/section/__nav-item/section__nav-item.sass
@@ -6,7 +6,7 @@
   font-size: 14px
   line-height: 20px
   text-transform: uppercase
-  max-width: 600px
+  width: calc(100% - 40px)
 
   &::before
     content: ''
@@ -26,5 +26,6 @@
       display: none
 
   @media screen and (min-width: $desktop-width)
+    max-width: 600px
     top: 50px
     left: calc(50% - 670px)
